# homework_20_2

./: catalog_data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_category_created_at.py  0003_remove_category_created_at.py  0004_alter_category_options_alter_product_options_and_more.py  0005_blog.py
catalog/templates/catalog/: base.html  blog.html  blog_delete.html  blog_detail.html  blog_form.html  blog_update.html  contacts.html  product.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: tags.py
config/: settings.py  urls.py
